Bug 168070 - No error dialog when unable to open compared document
Summary: No error dialog when unable to open compared document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.4 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.1 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2025-08-22 22:24 UTC by Yousuf Philips (jay) (retired)
Modified: 2025-08-29 10:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
error dialog from 7.6.7 (22.85 KB, image/png)
2025-08-22 22:24 UTC, Yousuf Philips (jay) (retired)
Details
document for step 1 (6.23 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-08-22 22:39 UTC, Yousuf Philips (jay) (retired)
Details
document for step 3 (9.76 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-08-22 22:39 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2025-08-22 22:24:35 UTC
Description:
When attempting to compare two documents to see the changes that have happened between them, if libreoffice isn't able to open the second document it won't give an error dialog notifying the user of this.

This is a regression, as the error dialog did appear in 7.6.7.

Steps to Reproduce:
1. Open a document
2. Edit > Track Changes > Compare Document
3. Select a document which would give an error if opened regularly

Actual Results:
No dialog appears

Expected Results:
For an error dialog to appear


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 4; OS: Linux 6.11; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Yousuf Philips (jay) (retired) 2025-08-22 22:24:52 UTC
Created attachment 202460 [details]
error dialog from 7.6.7
Comment 2 Yousuf Philips (jay) (retired) 2025-08-22 22:39:17 UTC
Created attachment 202461 [details]
document for step 1
Comment 3 Yousuf Philips (jay) (retired) 2025-08-22 22:39:43 UTC
Created attachment 202462 [details]
document for step 3
Comment 4 raal 2025-08-23 15:44:25 UTC
Confirm with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 953a4159ba48b2901e6b1660fc89960fcaa87b0c
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 5 raal 2025-08-23 15:54:49 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.2.
Adding Cc: to Mike Kaganski ; Could you possibly take a look at this one?
Thanks
 37436fcbf876b224af86b81d7c5f56a9afbe4f02 is the first bad commit
commit 37436fcbf876b224af86b81d7c5f56a9afbe4f02
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Wed Nov 29 06:43:14 2023 +0100

    source 92e7f28f9aff78907bad030be80a9ea9452a3ddc

160001: Related: tdf#104718 Use package repair request and behavior | https://gerrit.libreoffice.org/c/core/+/160001
Comment 6 Mike Kaganski 2025-08-25 12:58:46 UTC
https://gerrit.libreoffice.org/c/core/+/190173
Comment 7 Commit Notification 2025-08-25 15:13:58 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/be6aa7ca0a3d9d444956c0e19a262a2ef91bdd5a

tdf#168070: SwFindDocShell may need an interaction handler

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-08-25 17:45:30 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d5446d7c6e59defb3c9abcf2a9545d13fdd4c887

tdf#168070: SwFindDocShell may need an interaction handler

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-08-26 19:21:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/4c215d7c983f209cfe3e4af7f8e8b5a20c6abf18

tdf#168070: SwFindDocShell may need an interaction handler

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-08-29 10:17:20 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7cfd0af0a5799265164a56a006d8b0207585aeb9

tdf#168070: sw: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.