tdf#168070: SwFindDocShell may need an interaction handler

It may attempt to open the passed document, and then it would create
an SfxMedium, that will define how to interact e.g. on errors. When
caller has an interaction handler, it should pass it.

Change-Id: Icd0881ecf31b1e1a4731e1776413c1f62803c256
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190173
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit be6aa7ca0a3d9d444956c0e19a262a2ef91bdd5a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190188
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190237